fixing campaign show page
