# mock/swagger.yml
@@ -280,6 +280,95 @@ paths:
                         type: array
                         items:
                           $ref: '#/components/schemas/Workflow'
+  /recipients:
+    get:
+      tags:
+        - recipients
+      summary: Get Recipient List
+      description: Return a list of recipients.
+      operationId: getCampaigns
+      parameters:
+        - name: page
+          in: query
+          description: The wanted page number (one page).
+          schema:
+            type: integer
+            format: int32
+            minimum: 1
+        - name: limit
+          in: query
+          description: The maximum number of recipients returned for one page.
+          schema:
+            type: integer
+            format: int32
+            minimum: 0
+            maximum: 50
+        - name: sort
+          in: query
+          description: Optional sorting order for recipients.
+          schema:
+            type: string
+            enum:
+              - +id
+              - -id
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                  data:
+                    type: object
+                    properties:
+                      total:
+                        type: integer
+                        format: int32
+                      items:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/Recipient'
+  /recipients/{id}:
+    get:
+      tags:
+        - recipients
+      summary: Get Recipient Detail
+      description: Get recipient detail by ID.
+      operationId: getRecipient
+      security:
+        - AccessTokenAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Recipient id.
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                  data:
+                    type: object
+                    properties:
+                      contact:
+                        $ref: '#/components/schemas/Recipient'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
   /campaigns:
     get:
       tags:
@@ -1276,6 +1365,30 @@ components:
        - company
        - date
     Company:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        status:
+          type: string
+          enum:
+            - active
+            - inactive
+        name:
+          type: string
+          example: IG Won World Championship
+        phone:
+          type: string
+          example: Company phone
+        email:
+          type: string
+          example: Company email
+      required:
+       - id
+       - status
+       - name
+    Recipient:
       type: object
       properties:
         id:
